# standards

./: .pre-commit-config.yaml  azure-pipelines.yml  pyproject.toml
.github/workflows/: build-viewer.yaml  deploy.yaml
draft/DataProducts/AirQuality/: Current.json
draft/DataProducts/Company/: BasicInfo.json  Recommendation.json  Shareholders.json
draft/DataProducts/Health/: Diagnoses.json
draft/DataProducts/LetterOfCredit/: ExportInstructions.json
draft/DataProducts/Location/Indoor/: BLEBeacons.html  BLEBeacons.json
draft/DataProducts/Product/: DimensionsAndWeights.json
draft/DataProducts/Shipment/: ForwardersCargoReceipt.json  InsuranceCertificate.json  PackingList.json
draft/DataProducts/Transaction/: Invoice.json
draft/DataProducts/Weather/Current/: Metric.json
src/: converter.py
src/draft/DataProducts/Location/Indoor/: BLEBeacons.py
